[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cern-library-mcp"
version = "0.1.0"
description = "MCP server for the CERN Library Catalogue"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cern-library-mcp = "server:run"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
